[project]
name = "lineshopping-api-mcp"
version = "0.1.0"
description = "MCP Server for the LINE Shopping API, enabling AI agents to interact with LINE Shopping data and operations"
readme = "README.md"
authors = [
    {name = "Woraphol", email = "woraphol.j@gmail.com"}
]
license = {text = "MIT"}
homepage = "https://github.com/woraphol-j/lineshopping-api-mcp"
repository = "https://github.com/woraphol-j/lineshopping-api-mcp"
keywords = ["mcp", "line-shopping", "api", "ai-agent", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.25.0",
]

[project.scripts]
lineshopping-mcp = "lineshopping_api_mcp.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lineshopping_api_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"lineshopping_api_mcp/openapi.json" = "lineshopping_api_mcp/openapi.json"
